Bug 262570 - Queued downloads start allocating diskspace all together
Summary: Queued downloads start allocating diskspace all together
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-08 19:41 UTC by Frederik Schwarzer
Modified: 2011-01-30 13:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik Schwarzer 2011-01-08 19:41:51 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

Hi,

when I set KTorrent to allocate diskspace of torrents in advance and run several downloads so that some are queued, the second the first torrent finishes, all the queued torrents start allocating diskspace at the same time. After that only one of the downloads is started.

I think allocating diskspace should happen when the torrent is added to the list.

Reproducible: Didn't try




OS: Linux (i686) release 2.6.36-fs
Compiler: gcc
Comment 1 Joris Guisson 2011-01-27 19:13:53 UTC
Version ?
Comment 2 Frederik Schwarzer 2011-01-28 07:00:30 UTC
master built from source
Comment 3 Joris Guisson 2011-01-29 12:12:30 UTC
Disk space is only allocated when a torrent is started for the first time.

Do you have the feature enabled to reduce the priority of torrents when they are stalled for too long ?
Comment 4 Frederik Schwarzer 2011-01-29 13:04:31 UTC
Umm ... I think we are talking past each other ... or I do not understand your question. :)

I try to explain better:
If I reach the max number of torrents running, every additionally added torrent is queued.
Now if I have two torrents queued and one of the running torrents finishes, both queued torrents are starting to allocate their diskspace in parallel.
The first one done allocating is started; the other one is queued again after the allocation.
Comment 5 Joris Guisson 2011-01-30 13:40:53 UTC
Git commit 4f6ff532c02c61254a6cec8e16c4d010c7ec20e5 by Joris.
Pushed by guisson into branch 'master'.

Fix QM bug causing torrents to get started when it is not needed

BUG: 262570

M  +1    -0    ChangeLog     
M  +2    -2    libktcore/torrent/queuemanager.cpp     

http://commits.kde.org/e79f3103/4f6ff532c02c61254a6cec8e16c4d010c7ec20e5
Comment 6 Joris Guisson 2011-01-30 13:41:54 UTC
Git commit 139dda7fc148ee521aeb1bdafe38492ea8aacaeb by Joris.
Pushed by guisson into branch '4.1'.

Backport to 4.1: Fix QM bug causing torrents to get started when it is not needed

CCBUG: 262570

M  +1    -0    ChangeLog     
M  +2    -2    libktcore/torrent/queuemanager.cpp     

http://commits.kde.org/e79f3103/139dda7fc148ee521aeb1bdafe38492ea8aacaeb