Fix QM bug causing torrents to get started when it is not needed

BUG: 262570